rest adapter implemented

--- a/.env
+++ b/.env
@@ -5,8 +5,8 @@ DB_PORT=5432
 DB_USERNAME=admin
 DB_PASSWORD=secretpassword
 DB_NAME=projectcorpdb
-EMPLOYEE_Domain=https://employees-api.vercel.app/
-GETEMPLOYEES_URL=EMPLOYEE_Domain+/employees/
+EMPLOYEE_Domain=https://employees-api.vercel.app/api/
+GETEMPLOYEES_URL=https://employees-api.vercel.app/api/employees/
 
 
 
