--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 HTTP_SERVER=localhost
 HTTP_PORT=:3000
-DB_HOST=192.168.99.100
+DB_HOST=postgresprojectcorp
 DB_PORT=5432
 DB_USERNAME=admin
 DB_PASSWORD=secretpassword
