--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 HTTP_SERVER=localhost
 HTTP_PORT=:3000
-DB_HOST=postgresprojectcorp
+DB_HOST=corp_postgres
 DB_PORT=5432
 DB_USERNAME=admin
 DB_PASSWORD=secretpassword
-DB_NAME=projectcorpdb
+DB_NAME=corp_db
 EMPLOYEE_Domain=https://employees-api.vercel.app/api/
 GETEMPLOYEES_URL=https://employees-api.vercel.app/api/employees/
 
