refactor: change config to golang code style && add golangci-lint

--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
-HTTP_SERVER=localhost
-HTTP_PORT=:3000
-DB_HOST=corp_postgres
-DB_PORT=5432
-DB_USERNAME=admin
-DB_PASSWORD=secretpassword
-DB_NAME=corp_db
-EMPLOYEE_Domain=https://employees-api.vercel.app/api/
-GETEMPLOYEES_URL=https://employees-api.vercel.app/api/employees/
+HTTPServer=localhost
+HTTPPort=:3000
+DBHost=corp_postgres
+DBPort=5432
+DBUser=admin
+DBPASS=secretpassword
+DBName=corp_db
+EmployeDomain=https://employees-api.vercel.app/api/
+GetEmployeesURL=https://employees-api.vercel.app/api/employees/
 
 
 
